# Sky-Predictor

./: .gitignore  CHANGELOG.md  README.md  SKYPREDICTOR_FULL_REVIEW.md  SkyPredictor_코드리뷰_및_개선안.md  Transformer.spec  config.json  main.py  mypy.ini  push_test.md  push_test.txt  push_test2.md  push_test3.md  push_test4.md  pyproject.toml  requirements.txt  sky_review.md  test_push.txt  tests.py
Devcenter/: 04. 주식현재가.py  05. 주식차트.py  31. qt-주식정보조회.py  32. qt-주식계좌조회.py  33. qt-국내 선물옵션 실시간 시세.py  34. qt-해외선물 실시간 시세.py  46. 국선 이평매매 백테스팅-분봉.py  47. N분봉_연속수집.py  48. 오늘데이터_1분봉_자동수집.py  48. 피봇탐색_성능검증.py  Devcenter.py  EBEST_OPENAPI_SCHEMA.md  LONG_OR_FLAT_IMPROVEMENTS.md  LONG_OR_FLAT_IMPROVEMENTS_BACKTEST.md  PIVOT_REVERSAL_VERIFICATION.md  RECOMMENDED_STRATEGY.md  long_or_flat_improved_backtest.py  pivot_bear_market_test.py  pivot_bull_data_collector.py  pivot_bull_signal_generator.py  pivot_bull_sizing_optimizer.py  pivot_bull_strategy.py  pivot_bull_summary_report.md  pivot_bull_timing_optimizer.py  pivot_diagnose_windows.py  pivot_optuna_v2.py  pivot_profitability_analysis.py  pivot_regime_optimizer.py  pivot_short_bear_optimize.md  pivot_short_bear_optimize.py  pivot_short_bear_strategy.md  pivot_short_bear_strategy.py  pivot_short_bear_walkforward.md  pivot_short_bear_walkforward.py  pivot_short_bear_walkforward_MA20_down_or_ADX_bear.md  pivot_strategy_comparison_report.md  pivot_viability_analysis.py  pivot_wfo_optimizer.py  regime_intraday_v2.py  temp_check_periods.py  (+5 more)
app/: __init__.py  app_setup.py  pipeline_builder.py  run_experiments.py  run_modes.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: __init__.py  config.example.json  config.py  constants.py
core/: __init__.py  cli_args.py  interfaces.py  logging_utils.py  strike_utils.py  utils.py
data/: __init__.py  backtest_data_saver.py  merge_datasets.py  pivot_parameters.db  tick_normalizer.py  tick_processor.py
docs/: ADAPTIVE_INDICATOR_GUIDE.md  ARCHITECTURE.md  CHART_FLICKERING_DIAGNOSIS.md  CONFORMAL_PREDICTION_GUIDE.md  DAILY_TICK_TRAINING_RUNBOOK.md  DOCS_INDEX.md  telegram.md  (+25 more)
(+853 files in other folders)
