[project]
name = "skypredictor"
version = "1.0.0"
description = "KOSPI 200 Futures Prediction System"
authors = [
    {name = "SkyPredictor Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# Core dependencies (always required)
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "Markdown>=3.5.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.0.200",
    "mypy>=1.8.0",
]

# LLM API clients (optional, for use_llm=True)
llm = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-genai>=0.4.0",
]

# GUI dependencies (optional, for live trading UI)
gui = [
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
    "qt-material>=2.14",
]

# ML/Transformer dependencies (optional, for model training/inference)
ml = [
    "torch>=2.0.0,<3.0.0",
    "scipy>=1.11.0",
]

# Type stubs (optional, for better type checking)
types = [
    "pandas-stubs>=2.0.0",
]

# All optional dependencies
all = [
    "skypredictor[dev,llm,gui,ml,types]",
]

[project.scripts]
skypredictor = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
